Fixed search bar on mobile

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -58,6 +58,14 @@ p {
 
 /* header */
 
+header {
+  background-color: #006699;
+
+  a {
+    color: white;
+  }
+}
+
 #logo {
   float: left;
   margin-right: 10px;
